# intentusnet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  feature_request.md  general-discussion.md  pull-request.md
.github/workflows/: deterministic-stability.yml
deterministic_agent/: __init__.py  eval_agent.py  main.py  mcp_adapter.py  models.py  recovery_engine.py  replay_engine.py  tool_registry.py  wal_engine.py
deterministic_agent/tests/: __init__.py  golden_dataset.jsonl  test_deterministic_agent.py
docs/: README.md  RFC-0001.md  RFC-0002-INTENTUSNET-ARCHITECTURE.md  RFC-0003-REGISTRY-SCHEMA.md  RFC-0004-ROUTING-RULES.md  RFC-0005-SECURITY.md  RFC-0006-TRACER.md  RFC-0007-KEYS.md  RFC-0007-TRANSPORT.md  RFC-0008-AGENT-REGISTRY.md  RFC-0008-Orchestrator-Workflow-Rules  RFC-0009-CAPABILITY-SCHEMA.md  RFC-0009-IntentusNet–MCP-Integration-Layer.md  RFC-0009-ORCHESTRATOR.md  RFC-0010-ANALYTICS.md  ci-cd.md  contracts.md  determinism.md  production-hardening.md  replay-and-wal.md  roadmap.md  runtime-determinism.md  wal-format.md
docs-site/: .eslintrc.js  .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js  tsconfig.json
docs-site/blog/: 2025-12-16-introducing-intentusnet.mdx  2026-01-01-v030-release.mdx  2026-01-03-execution-recording-deep-dive.mdx  authors.yml
docs/architecture/: agent-model.md  router-design.md  runtime-overview.md  transport-layer.md
docs/concepts/: deterministic-routing.md  emcl.md  fallback.md  intent-routing.md  mcp-adapter.md  tracing.md
docs/decisions/: tradeoffs.md  why-intentusnet.md
docs/demos/: advanced-research-demo.md  deterministic-routing-demo.md
docs/enterprise/: README.md  emcl-encryption.md  gateway-enforcement.md  time-machine-ui.md
docs/operations/: production-considerations.md
docs/phase2/: README.md  emcl-encryption.md  gateway-enforcement.md  time-machine-ui.md
docs/reference/: intent-envelope.md  routing-options.md
docs/release-notes/: v1.5.0.md  v1.5.1.md  v4.5.md
examples/: __init__.py
examples/advanced/: __init__.py  demo_advanced_research.py  http_encrypted_demo.py  mcp_demo.py  scenarios.py  web_server.py  web_server_advanced.py  web_server_emcl.py
examples/basic-mcp-server/: README.md  server.py
examples/canonical_demo/: README.md  __init__.py  agent.py  run.py
examples/deterministic_routing_demo/: README.md  demo.py
examples/distributed/: README.md  docker-compose.yml  node_a_orchestrator.py  node_b_worker.py  node_execution.py
examples/execution_replay_example/: README.md  agents.py  replay_execution.py  run_live_success_v1.py  run_live_success_v2.py  runtime_v1.py  runtime_v2.py
examples/policies/: agent_access.json  enterprise_complex.json  feature_flags.json  (+4 more)
rfcs/: RFC-0001-debuggable-llm-execution.md
sdk/: pyproject.toml  requirements.txt
sdk/intentusnet/: __init__.py  cli.py
sdk/intentusnet/core/: __init__.py  agent.py  client.py  registry.py  router.py  runtime.py  tracing.py
sdk/intentusnet/emcl/: __init__.py  aes_gcm.py  base.py  identity_chain.py  simple_hmac.py
sdk/intentusnet/examples/dlika_demo/: README.md  __init__.py  cli.py  config.py  dlika_config.json
sdk/intentusnet/examples/dlika_demo/agents/: __init__.py  calendar_agent.py  contacts_agent.py  maps_agent.py  nlu_agent.py  planner_agent.py  weather_agent.py
sdk/intentusnet/examples/dlika_demo/storage/: __init__.py  calendar_db.py  contacts_db.py
sdk/intentusnet/examples/orchestrator_demo/: run.py
sdk/intentusnet/examples/orchestrator_demo/agents/: classifier.py  fallback_storage.py  logger.py  notification.py  orchestrator.py  primary_storage.py  secure_storage.py  summarizer.py
sdk/intentusnet/protocol/: __init__.py  enums.py  errors.py  models.py  validators.py
sdk/intentusnet/protocol/schemas/: emcl_envelope.json  intent_definition.json  intent_envelope.json  response.json  transport_envelope.json
sdk/intentusnet/tests/: __init__.py  test_emcl.py  test_end_to_end.py  test_protocol_models.py  test_registry.py  test_router.py  test_transports.py
sdk/intentusnet/transport/: __init__.py  base.py  http.py  inprocess.py  mcp_adapter.py  websocket.py  zeromq.py
sdk/intentusnet/utils/: __init__.py  id_gen.py  logging.py  timestamps.py
tests/: __init__.py  test_consistency.py  test_contracts.py  test_execution_header.py  test_failures.py  test_gateway.py  test_idempotency.py  test_locking.py  test_public_api.py  test_state_machine.py  test_wal.py
(+224 files in other folders)
