[project]
name = "intentusnet"
version = "0.3.0"
description = "IntentusNet — Open, secure, multi-agent runtime with deterministic routing, fallback, and transport abstraction."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Balachandar Manikandan" }
]

keywords = [
  "agents",
  "router",
  "intent-routing",
  "runtime",
  "mcp",
  "distributed-agents"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  # --- SECURITY ---
  "cryptography>=42.0.0",

  # --- TRANSPORTS ---
  "websockets>=12.0",
  "pyzmq>=25.1.0",

  # --- OPTIONAL HTTP GATEWAY ---
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",

  # --- UTILITIES ---
  "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.8.0",
  "black>=24.1.1",
  "ruff>=0.2.0",
]

examples = [
  "requests>=2.31.0",
  "aiohttp>=3.9.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["intentusnet", "intentusnet.*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
